feat: Rename User to Card
userMask is renamed to permissions
userId is renamed to cardPosition
