# app/generated/schema/openapi.json
@@ -49,20 +49,20 @@
         }
       }
     },
-    "/user/{userId}": {
+    "/card/{cardPosition}": {
       "delete": {
-        "operationId": "userDelete",
-        "x-eov-operation-handler": "userDelete",
+        "operationId": "cardDelete",
+        "x-eov-operation-handler": "cardDelete",
         "tags": [
-          "Users"
+          "Cards"
         ],
         "parameters": [
           {
-            "name": "userId",
+            "name": "cardPosition",
             "in": "path",
             "required": true,
             "schema": {
-              "$ref": "#/components/schemas/UserId"
+              "$ref": "#/components/schemas/CardPosition"
             }
           }
         ],
@@ -83,18 +83,18 @@
         }
       },
       "get": {
-        "operationId": "userGet",
-        "x-eov-operation-handler": "userGet",
+        "operationId": "cardGet",
+        "x-eov-operation-handler": "cardGet",
         "tags": [
-          "Users"
+          "Cards"
         ],
         "parameters": [
           {
-            "name": "userId",
+            "name": "cardPosition",
             "in": "path",
             "required": true,
             "schema": {
-              "$ref": "#/components/schemas/UserId"
+              "$ref": "#/components/schemas/CardPosition"
             }
           }
         ],
@@ -104,7 +104,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/User"
+                  "$ref": "#/components/schemas/Card"
                 }
               }
             }
@@ -122,19 +122,19 @@
         }
       },
       "put": {
-        "operationId": "userPut",
-        "x-eov-operation-handler": "userPut",
+        "operationId": "cardPut",
+        "x-eov-operation-handler": "cardPut",
         "tags": [
-          "Users"
+          "Cards"
         ],
-        "description": "Update an existing user, changing their userMask or badge. In order to prevent accidentally overwriting an existing user's entry the user's current badge value must also be submitted as part of this request.",
+        "description": "Update an existing card slot, changing its permissions group or badge number. In order to prevent accidentally overwriting an existing card entry the current badge value must also be submitted as part of this request.",
         "parameters": [
           {
-            "name": "userId",
+            "name": "cardPosition",
             "in": "path",
             "required": true,
             "schema": {
-              "$ref": "#/components/schemas/UserId"
+              "$ref": "#/components/schemas/CardPosition"
             }
           }
         ],
@@ -151,29 +151,22 @@
                   "currentBadge": {
                     "$ref": "#/components/schemas/Badge"
                   },
-                  "userMask": {
-                    "$ref": "#/components/schemas/UserMask"
+                  "permissions": {
+                    "$ref": "#/components/schemas/Permissions"
                   }
                 },
                 "required": [
                   "badge",
                   "currentBadge",
-                  "userMask"
+                  "permissions"
                 ]
               }
             }
           }
         },
         "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
+          "204": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request",
@@ -198,10 +191,10 @@
         }
       }
     },
-    "/users": {
+    "/cards": {
       "get": {
-        "operationId": "usersGet",
-        "x-eov-operation-handler": "usersGet",
+        "operationId": "cardsGet",
+        "x-eov-operation-handler": "cardsGet",
         "responses": {
           "200": {
             "description": "OK",
@@ -210,7 +203,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/User"
+                    "$ref": "#/components/schemas/Card"
                   }
                 }
               }
@@ -302,33 +295,33 @@
       "Badge": {
         "type": "string"
       },
-      "User": {
+      "Card": {
         "type": "object",
         "properties": {
           "id": {
-            "$ref": "#/components/schemas/UserId"
+            "$ref": "#/components/schemas/CardPosition"
           },
           "badge": {
             "$ref": "#/components/schemas/Badge"
           },
-          "userMask": {
-            "$ref": "#/components/schemas/UserMask"
+          "permissions": {
+            "$ref": "#/components/schemas/Permissions"
           }
         },
         "required": [
           "id",
-          "userMask",
+          "permissions",
           "badge"
         ]
       },
-      "UserId": {
+      "CardPosition": {
         "type": "string"
       },
-      "UserMask": {
+      "Permissions": {
         "type": "integer",
         "minimum": 0,
         "maximum": 255,
-        "description": "A UserMask is a byte value between 0 and 255 that may be used in user operations to apply actions to large swaths of users simultaneously, instead of applying updates user-by-user."
+        "description": "A Permission is a byte value between 0 and 255 that can be used to group cards into groups of behavior."
       }
     }
   }
